# aoc-2021

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
benchmarking/: Cargo.toml  gen_input.py
benchmarking/benches/: my_benchmark.rs
benchmarking/src/: main.rs
c/: .gitignore  Makefile  day01.c
rust/src/: day12.rs  day13.rs  day2.rs  day4.rs  lib.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day20.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
srcJs/day4/: index.test.ts
