[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"

[[bin]]
name="file_read"
path="src/file_read.rs"

[[bench]]
name = "my_benchmark"
harness = false

[term]
verbose = true
